--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.rvsoft.safty"
         minSdkVersion 22
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,9 +20,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -37,28 +37,31 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:15.0.1'
 
     //Palette
-    implementation 'com.android.support:palette-v7:27.1.1'
+    implementation 'com.android.support:palette-v7:28.0.0'
 
     //Card View
-    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
     //Recycler View
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     //Firebase
-    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.3'
 
     //Firebase Crashlytics
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 
     //Firebase Notification
-    implementation 'com.google.firebase:firebase-messaging:17.1.0'
+    implementation 'com.google.firebase:firebase-messaging:17.3.2'
 
     //Firebase Confid
     implementation 'com.google.firebase:firebase-config:16.0.0'
 
+    //Firebase Database
+    implementation 'com.google.firebase:firebase-database:16.0.2'
+
     //Volley
-    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.android.volley:volley:1.1.0'
 
     // Lottie
     implementation 'com.airbnb.android:lottie:2.3.0'
@@ -68,4 +71,7 @@ dependencies {
 
     // Fancy Dialog
     implementation 'com.geniusforapp.fancydialog:FancyDialog:0.1.4'
+
+    //Geo Fire
+    //implementation 'com.firebase:geofire-android:2.3.1'
 }
