--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'io.fabric'
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -27,14 +27,17 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //Firebase Messaging
+    implementation 'com.google.firebase:firebase-messaging:17.3.3'
+
     //Awareness API
-    implementation 'com.google.android.gms:play-services-awareness:15.0.1'
+    implementation 'com.google.android.gms:play-services-awareness:16.0.0'
 
     //Google Map
-    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
 
     //Google Location Service
-    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 
     //Palette
     implementation 'com.android.support:palette-v7:28.0.0'
@@ -46,19 +49,19 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     //Firebase
-    implementation 'com.google.firebase:firebase-core:16.0.3'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
 
     //Firebase Crashlytics
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
 
     //Firebase Notification
-    implementation 'com.google.firebase:firebase-messaging:17.3.2'
+    implementation 'com.google.firebase:firebase-messaging:17.3.3'
 
     //Firebase Confid
-    implementation 'com.google.firebase:firebase-config:16.0.0'
+    implementation 'com.google.firebase:firebase-config:16.0.1'
 
     //Firebase Database
-    implementation 'com.google.firebase:firebase-database:16.0.2'
+    implementation 'com.google.firebase:firebase-database:16.0.3'
 
     //Volley
     implementation 'com.android.volley:volley:1.1.0'
@@ -72,6 +75,8 @@ dependencies {
     // Fancy Dialog
     implementation 'com.geniusforapp.fancydialog:FancyDialog:0.1.4'
 
-    //Geo Fire
-    //implementation 'com.firebase:geofire-android:2.3.1'
+    //Butter Knife
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
+apply plugin: 'com.google.gms.google-services'
