--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    //Firebase Messaging
-    implementation 'com.google.firebase:firebase-messaging:17.3.3'
-
     //Awareness API
     implementation 'com.google.android.gms:play-services-awareness:16.0.0'
 
@@ -49,25 +46,31 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     //Firebase
-    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-core:16.0.5'
+
+    //Firebase Auth
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
 
     //Firebase Crashlytics
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
 
     //Firebase Notification
-    implementation 'com.google.firebase:firebase-messaging:17.3.3'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
 
     //Firebase Confid
-    implementation 'com.google.firebase:firebase-config:16.0.1'
+    implementation 'com.google.firebase:firebase-config:16.1.0'
 
     //Firebase Database
-    implementation 'com.google.firebase:firebase-database:16.0.3'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
 
     //Volley
     implementation 'com.android.volley:volley:1.1.0'
 
+    //Ion
+    implementation 'com.koushikdutta.ion:ion:2.2.1'
+
     // Lottie
-    implementation 'com.airbnb.android:lottie:2.3.0'
+    implementation 'com.airbnb.android:lottie:2.5.0'
 
     //Prefrence Screen
     implementation 'com.yarolegovich:mp:1.0.9'
@@ -78,5 +81,12 @@ dependencies {
     //Butter Knife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    //Ticker View
+    //Doc: https://www.uplabs.com/posts/ticker-library
+    implementation 'com.robinhood.ticker:ticker:2.0.0'
+
+    //Circular Image View
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
